--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -76,7 +76,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                      
+                        <h1 class="brand-heading">Tegado</h1>
+                        <p class="intro-text">Et a sociosqu leo vel scelerisque placerat quam vestibulum ullamcorper augue est cum ultricies.</p>
+                        <a href="#about" class="btn btn-circle page-scroll">
+                            <i class="fa fa-angle-double-down animated"></i>
                         </a>
                     </div>
                 </div>
